<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNewTask"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="60dp"
            app:srcCompat="@drawable/ic_add"

            android:layout_height="60dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks"
        android:layout_width="409dp"
        android:layout_height="659dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />


</androidx.constraintlayout.widget.ConstraintLayout>